[package]
name = "lwmacct-260629-rust-helloworld"
version = "0.1.0"
edition = "2024"
description = "A Rust hello world package for learning Cargo and crates.io publishing."
license = "MIT OR Apache-2.0"
repository = "https://github.com/lwmacct/260629-rust-helloworld"
readme = "README.md"

[dependencies]
